<resources>
    <string name="app_name">Laboratory-3 Calculator</string>
    <string name="welcome">WELCOME</string>
    <string name="laboratory_3">Laboratory-3</string>
    <string name="_2021">2021</string>
    <string name="todo1">TODO</string>
    <string name="hint1">0.0</string>
    <string name="hint2">0.0</string>
    <string name="urj">-</string>
    <string name="hasah">*</string>
    <string name="nemeh">+</string>
    <string name="huvaah">/</string>
    <string name="hartext">Хариу :</string>
    <string name="hariu">0.0</string>
    <string name="clear">clear</string>
    <string name="calculator">Calculator</string>
    <string name="animal">Animal</string>
    <string name="harah">Харах</string>
    <string name="text1">Дэлгэцэнд харуулах</string>
    <string name="text2">Амьтан сонгох</string>
    <string name="text3">Эхлэх</string>
    <string name="text4">Нохой</string>
    <string name="text5">Муур</string>
    <string name="text6">Туулай</string>
    <string name="laboratories">Laboratories</string>
    <string name="lab2_animal">Lab2-Animal</string>
    <string name="lab2_calculator">Lab2-Calculator</string>
    <string name="lab3_animal">lab3-animal</string>
    <string name="lab4_layout">lab4-layout</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="fb">TODO</string>
    <string name="ig">TODO</string>
    <string name="tw">TODO</string>
    <string name="lab4_btn">Button</string>
    <string name="hereglegch">aaaa</string>
    <string name="t1">Хэрэглэгч</string>
    <string name="t2">Овог</string>
    <string name="t3">Нэр</string>
    <string name="t4">Мейл хаяг</string>
    <string name="t5">Утасны дугаар</string>
    <string name="t6">Бүртгүүлэх</string>
    <string name="t7">Нууц үг</string>
    <string name="batkhuleg">Batkhuleg</string>
    <string name="title_activity_lab5">lab5</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_name">channelname</string>
    <string name="channel_description">channeldesc</string>
    <string name="title_activity_lab10nav">lab10nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="open">open</string>
</resources>