<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".lab4">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E91E63">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:src="@drawable/cover"
    android:scaleType="fitXY"
    android:background="#E91E63"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E91E63"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton

                android:layout_width="70dp"
                android:layout_height="70dp"

                android:background="@drawable/fb2" />

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/ig2"
                />

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/tw" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="366dp"
            android:layout_weight="1"
            android:background="#E91E63"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold_italic"
                android:gravity="center"
                android:text="@string/t1"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal"
                android:padding="15dp">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="196dp"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/nunito_sans_bold_italic"
                    android:hint="@string/t2"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp"
                    tools:singleLine="true" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/nunito_sans_bold_italic"
                    android:hint="@string/t3"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="18sp"
                    tools:textColorHighlight="#FFFFFF" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="163dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="103dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        app:srcCompat="@android:drawable/ic_dialog_email"
                        tools:srcCompat="@tools:sample/avatars" />

                    <EditText
                        android:id="@+id/editTextTextPersonName8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunito_sans_bold_italic"
                        android:hint="@string/t4"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textSize="18sp"
                        tools:hint="Мейл хаяг" />
                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="103dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@android:drawable/stat_sys_phone_call"
                        tools:srcCompat="@tools:sample/avatars" />

                    <EditText
                        android:id="@+id/editTextTextPersonName5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunito_sans_bold_italic"
                        android:hint="@string/t5"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:lineHeight="0dp"
                        android:singleLine="true"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textSize="18sp"
                        tools:singleLine="true" />
                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="73dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@android:drawable/ic_dialog_alert"
                        tools:srcCompat="@tools:sample/avatars" />

                    <EditText
                        android:id="@+id/editTextTextPersonName9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/nunito_sans_bold_italic"
                        android:hint="@string/t7"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#FFFFFF"
                        android:textSize="18sp"
                        tools:hint="Нууц үг" />
                </TableRow>

            </TableLayout>


            <Button
                android:id="@+id/burtguulegBtn"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/nunito_sans_bold"
                android:rotationX="4"
                android:layout_margin="20dp"
                android:text="@string/t6"
                android:textSize="18sp"
                app:backgroundTint="#F44336"
                tools:background="#FFFFFF" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:gravity="center"
            android:text="@string/_2021"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>